Fix invisible text

--- a/src/theme/misc.scss
+++ b/src/theme/misc.scss
@@ -221,3 +221,8 @@ img.network-tree {
 .js-write-tab, .js-preview-tab {
     background-color: $dropdown-bg !important;
 }
+
+/* Footer text */
+strong {
+    color: $text-color !important;
+}
