--- a/src/theme/profile.scss
+++ b/src/theme/profile.scss
@@ -147,10 +147,18 @@
     }
 }
 
-summary .color-text-primary {
+summary {
     color: $text-color !important;
 }
 
 .form-group > label {
     background-color: transparent !important;
+}
+/* Date text for contribution timeline */
+span.color-bg-primary {
+    background-color: $bg-color !important;
+}
+
+div.color-bg-primary {
+    background-color: $bg-color !important;
 }
